--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mapbox-gl": "^1.13.0",
     "places.js": "^1.19.0",
     "popper.js": "^1.16.1",
+    "sweetalert": "^2.1.2",
     "turbolinks": "^5.2.0",
     "typed.js": "^2.0.11"
   },
